# telco-customer-churn

./: README.md  main.py  pyproject.toml  requirements.txt
data/datasets/: inference.parquet  train.parquet  validation.parquet
data/models/: baseline_logreg.joblib
data/predictions/: inference_predictions.parquet  validation_predictions.parquet
data/staging/: telco_customers_clean.parquet  telco_customers_staging.parquet
docs/: data_contracts.md  data_overview.md  dataset_construction.md  decision_analysis.md  feature_definitions.md  modeling_baseline.md  staging_quality.md
src/: constants.py  log_utils.py
src/datasets/: build_training_set.py  checks.py  splits.py
src/features/: build_features.py  checks.py  feature_views.py
src/ingestion/: load_raw.py  schemas.py
src/models/: predict_baseline.py  train_baseline.py
src/notebooks/: try_decision.ipynb
src/staging/: checks.py  transform.py
